<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground"
    tools:context=".rating.RatingFragment">

    <Chronometer
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/very_upset"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView"
        style="@style/TextToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/rate_your_sleep"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/very_upset"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_noun_very_upset"
        app:layout_constraintBottom_toTopOf="@+id/happy"
        app:layout_constraintEnd_toStartOf="@id/upset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/poor"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/very_upset"
        app:layout_constraintStart_toStartOf="@id/very_upset"
        app:layout_constraintTop_toBottomOf="@id/very_upset" />

    <ImageView
        android:id="@+id/upset"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_noun_upset_875790"
        app:layout_constraintBottom_toBottomOf="@id/very_upset"
        app:layout_constraintEnd_toStartOf="@+id/satisfactory"
        app:layout_constraintStart_toEndOf="@id/very_upset"
        app:layout_constraintTop_toTopOf="@id/very_upset"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/below_average"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/upset"
        app:layout_constraintStart_toStartOf="@id/upset"
        app:layout_constraintTop_toBottomOf="@id/upset" />

    <ImageView
        android:id="@+id/satisfactory"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_noun_glad_1043787"
        app:layout_constraintBottom_toBottomOf="@id/very_upset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/upset"
        app:layout_constraintTop_toTopOf="@id/very_upset" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/satisfactory"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/satisfactory"
        app:layout_constraintStart_toStartOf="@id/satisfactory"
        app:layout_constraintTop_toBottomOf="@id/satisfactory" />

    <ImageView
        android:id="@+id/happy"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_noun_amused_875789"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/upset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/very_upset"
        app:layout_constraintTop_toBottomOf="@+id/very_upset" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/good"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/happy"
        app:layout_constraintStart_toStartOf="@id/happy"
        app:layout_constraintTop_toBottomOf="@id/happy" />

    <ImageView
        android:id="@+id/very_happy"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_noun_laugh_875791"
        app:layout_constraintBottom_toBottomOf="@+id/happy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/upset"
        app:layout_constraintTop_toTopOf="@+id/happy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/great"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/very_happy"
        app:layout_constraintStart_toStartOf="@id/very_happy"
        app:layout_constraintTop_toBottomOf="@id/very_happy" />
</androidx.constraintlayout.widget.ConstraintLayout>