<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorWhite"
    tools:context=".home.HomeFragment">

    <TextView
        android:id="@+id/text_header"
        style="@style/TextToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:text="@string/night_night"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_sleep_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/rounded_white_bg"
        android:text="@string/start"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop_sleep_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_white_bg"
        android:text="@string/stop"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/start_sleep_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_sleep_button" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chronoCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/colorFragmentBackground"
        app:layout_constraintEnd_toEndOf="@id/sleep_recycler"
        app:layout_constraintStart_toStartOf="@id/sleep_recycler"
        app:layout_constraintTop_toBottomOf="@+id/text_header"
        app:layout_constraintVertical_chainStyle="spread">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Chronometer
                android:id="@+id/sleepWatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textAlignment="center"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sleep_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/empty_list"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="32dp"
        android:background="@drawable/cherry_list_is_empty"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/start_sleep_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronoCardView" />

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway"
        android:text="@string/you_don_t_have_any_sleep_record_stored_at_the_moment"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/empty_list"
        app:layout_constraintEnd_toEndOf="@id/empty_list"
        app:layout_constraintStart_toStartOf="@id/empty_list" />




</androidx.constraintlayout.widget.ConstraintLayout>
