<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/link_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorFragmentBackground"
            android:padding="16sp">

            <TextView
                android:id="@+id/sleep_time_start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/start_time"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/start_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:background="@drawable/rounded_white_bg"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/sleep_time_start_text"
                app:layout_constraintStart_toEndOf="@id/sleep_time_start_text"
                app:layout_constraintTop_toTopOf="@id/sleep_time_start_text"
                tools:text="Thu,10:45 pm" />

            <TextView
                android:id="@+id/sleep_time_duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/duration_"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sleep_time_end_text" />

            <TextView
                android:id="@+id/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_white_bg"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/sleep_time_duration_text"
                app:layout_constraintStart_toEndOf="@id/sleep_time_duration_text"
                app:layout_constraintTop_toTopOf="@id/sleep_time_duration_text"
                tools:text="10 hrs" />

            <TextView
                android:id="@+id/sleep_time_end_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/end_time"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sleep_time_start_text" />

            <TextView
                android:id="@+id/end_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_white_bg"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/sleep_time_end_text"
                app:layout_constraintStart_toEndOf="@id/sleep_time_end_text"
                app:layout_constraintTop_toTopOf="@id/sleep_time_end_text"
                tools:text="Fri,8:45 am" />

            <TextView
                android:id="@+id/sleep_quality_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold"
                android:text="@string/sleep_rating"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sleep_time_duration_text" />

            <TextView
                android:id="@+id/sleep_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_white_bg"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/sleep_quality_indicator"
                app:layout_constraintStart_toEndOf="@id/sleep_quality_indicator"
                app:layout_constraintTop_toTopOf="@id/sleep_quality_indicator"
                tools:text="4" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sleep_rating_text" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/rating_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_baseline_help_24"
                app:layout_constraintStart_toStartOf="@+id/view_divider"
                app:layout_constraintTop_toBottomOf="@+id/view_divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorFragmentBackground"
                app:layout_constraintBottom_toBottomOf="@id/rating_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rating_image"
                app:srcCompat="@android:drawable/ic_menu_share" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>